--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hashbrown = "0.13.2"
-lazy_static = "1.4.0"
 rocket = "0.5.0-rc.1"
+serde = "1.0.152"
+sqlx = { version = "0.6.2", features = ["postgres", "uuid", "runtime-tokio-rustls"] }
+uuid = "1.2.2"
