--- a/Rocket.toml
+++ b/Rocket.toml
@@ -17,6 +17,7 @@
 #cli_colors = true
 # secret_key: The Rocket application has a type to store private cookies in the application. The private cookies are encrypted by this key. The key length is 256 bits, and you can generate it using tools such as openssl rand -base64 32. Since this is an important key, you might want to keep it in a safe place.
 secret_key = "Aq2nmBPcLv8LcFxj98Pgk9dniTo1H2Be5ZeXemhfJzs="
+database_url = "postgresql://daniel@localhost/test"
 
 # tls: Use tls.key and tls.certs to enter the path to your TLS (Transport Layer Security) key and certificate file.
 [default.tls]
