--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 rocket = "0.5.0-rc.1"
 serde = "1.0.152"
 sqlx = { version = "0.6.2", features = ["postgres", "uuid", "runtime-tokio-rustls"] }
-uuid = "1.2.2"
+uuid = { version = "1.2.2", features = ["v4"] }
